2004-04-08  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c:
	(planner_gantt_model_get_path_from_task):
	* src/planner-task-tree.c: (planner_task_tree_remove_task),
	(planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down),
	(planner_task_tree_set_anchor): Commit patch for bug #138595 from
	Lincoln Phipps. Also clean up task removal a bit and add anchor
	handling to Lincoln's patch.

2004-04-07  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c
	(planner_gantt_model_get_path_from_task): Return NULL if the task
	is not in the tree. Gets rid of warning when removing tasks with
	the undo code.

2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-06  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c:
	* src/planner-gantt-chart.c:
	* src/planner-relation-arrow.c:
	* src/planner-task-dialog.c: (task_dialog_pred_cell_edited): Fix
	bug #129140, implement remaining task constraint types. Patch from
	Corey Schuhen.

2004-04-06  Richard Hult  <richard@imendio.com>

	* data/ui/gantt-view.ui:
	* data/ui/resource-view.ui:
	* data/ui/task-view.ui:
	* data/ui/time-table-view.ui: Add tooltips, patch from Setul
	Patel. Fixes bug #130937.

2004-04-06  Richard Hult  <richard@imendio.com>

	* data/dtd/mrproject-0.6.dtd:
	* data/glade/task-dialog.glade:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* docs/sql/database-0.11.sql:
	* docs/sql/upgrade-0.6.x-0.11.sql:
	* libplanner/mrp-old-xml.c:
	* libplanner/mrp-parser.c:
	* libplanner/mrp-sql.c:
	* libplanner/mrp-task.c:
	* src/planner-task-dialog.c: Fix bug #137544, task priority
	spinner not effective. Patch from Lincoln Phipps.

2004-04-06  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c: (task_manager_do_backward_pass):
	Fix bug #137063, higlight critical tasks and sub-tasks. Patch from
	Doroszlai Attila. This also fixes bug #138437.
