@@ -1,3 +1,14 @@
+2004-04-09  Richard Hult  <richard@imendio.com>
+
+	* src/planner-resource-dialog.c: (resource_dialog_name_changed_cb),
+	(resource_dialog_short_name_changed_cb),
+	(resource_dialog_resource_type_changed_cb),
+	(resource_dialog_type_changed_cb),
+	(resource_dialog_group_changed_cb),
+	(resource_dialog_email_changed_cb),
+	(resource_dialog_cost_changed_cb): Block on the correct user data,
+	and handle non-numerical input better.
+
 2004-04-08  Richard Hult  <richard@imendio.com>
 
 	* src/planner-gantt-model.c:
